[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/BudgetingMinigame.gd" type="Script" id=1]
[ext_resource path="res://Milku.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI and Menus/satisfactionOverlay.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.286275, 0.396078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.282353, 0.286275, 0.396078, 0.745098 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.282353, 0.286275, 0.396078, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[node name="BudgetingMinigame" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1088.0
color = Color( 0.392157, 0.231373, 0.623529, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 200
custom_constants/margin_top = 200
custom_constants/margin_left = 200
custom_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 200.0
margin_right = 1720.0
margin_bottom = 880.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1520.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Pick a Budgeting Method"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 1520.0
margin_bottom = 638.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 504.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 100

[node name="FrugalBudget" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_top = 100.0
margin_right = 454.0
margin_bottom = 217.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Frugal Budget"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 1012.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 100

[node name="ExtravagantBudget" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_top = 100.0
margin_right = 454.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Extravagant Budget"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1016.0
margin_right = 1520.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 100
custom_constants/margin_left = 50
custom_constants/margin_bottom = 100

[node name="BalancedBudget" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_top = 100.0
margin_right = 454.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Balanced Budget"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 642.0
margin_right = 1520.0
margin_bottom = 680.0
alignment = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 1326.0
margin_right = 1520.0
margin_bottom = 38.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Confirm & Continue"
align = 2
icon_align = 2

[node name="Control" parent="." instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = 848.0
margin_right = 40.0
margin_bottom = 848.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/FrugalBudget" to="." method="_on_FrugalBudget_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/FrugalBudget" to="." method="_on_FrugalBudget_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/ExtravagantBudget" to="." method="_on_ExtravagantBudget_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/ExtravagantBudget" to="." method="_on_ExtravagantBudget_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/BalancedBudget" to="." method="_on_BalancedBudget_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/BalancedBudget" to="." method="_on_BalancedBudget_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
